Package synthetic data probe in astra jar